--- a/package.json
+++ b/package.json
@@ -12,10 +12,10 @@
   "devDependencies": {
     "@cloudflare/workers-types": "^2.2.2",
     "@types/route-parser": "^0.1.3",
-    "ts-loader": "^8.3.0",
+    "ts-loader": "8.3.0",
     "ts-node": "^10.2.1",
-    "typescript": "^4.4.2",
-    "webpack": "^5.52.0",
+    "typescript": "^4.4.3",
+    "webpack": "^5.56.0",
     "webpack-cli": "^4.8.0"
   },
   "dependencies": {
